# e-commerce-elt

./: .gitignore  Dockerfile  README.md  catalog.json  docker-compose.yaml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy-dbt-docs.yml  test-lint.yml
airflow/dags/: elt.py  elt_postgres_bigquery_dbt.py  elt_postgres_snowflake_dbt.py  extract_load.py  transform.py
airflow/dbt/: .gitignore  dbt_project.yml
airflow/dbt/models/staging/: _models.yml  stg_customers.sql  stg_products.sql  stg_shipments.sql
airflow/tests/: conftest.py  elt_postgres_snowflake_dbt_test.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml
dbt/models/docs/: columns.md
dbt/models/marts/: _models.yml  dim_carrier.sql  dim_customer.sql  dim_payment_method.sql  dim_product.sql
dbt/models/marts/dimension/: _models.yml  dim_date.sql  dim_products.sql
dbt/models/marts/fact/: _models.yml  fact_order_items.sql  fact_orders.sql  fact_payments.sql  fact_shipments.sql
dbt/models/staging/: _models.yml  _snowflake__models.yml  _snowflake__sources.yml  _sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_shipments.sql  stg_snowflake__customers.sql  stg_snowflake__order_items.sql  stg_snowflake__orders.sql  stg_snowflake__payments.sql  stg_snowflake__products.sql  stg_snowflake__shipments.sql
dbt/snapshots/: customers_snapshot.sql
postgresql/: init.sql
postgresql/data/: init.sql
s3/data/: payments.csv  payments.parquet  shipments.csv  shipments.parquet
(+3 files in other folders)
