[project]
name = "elt-e-commerce"
version = "1.0.0"
description = "Comprehensive ELT pipeline for e-commerce data using Airflow, PostgreSQL, Snowflake and dbt."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-amazon>=9.18.1",
    "apache-airflow-providers-google>=19.4.0",
    "apache-airflow-providers-postgres>=6.5.1",
    "apache-airflow-providers-snowflake>=6.8.0",
    "dbt-bigquery>=1.11.0",
    "dbt-snowflake>=1.10.6",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "."
testpaths = [
    "./airflow/tests"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: isort (import sorting)
ignore = ["E501"]         # Ignore line length errors (optional, e.g. if Black handles this)
